--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,55 @@
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <p>LOGO</p>
+          
+            
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <% if admin_signed_in? %>
+            <li class="nav-item">
+                <%= link_to "商品一覧", admin_items_path %>
+              </li>
+              <li class="nav-item">
+                <p>会員一覧</p>
+              </li>
+              <li class="nav-item">
+                <p>注文履歴一覧</p>
+              </li>
+              <li class="nav-item">
+                <p>ジャンル一覧</p>
+              </li>
+              <li class="nav-item">
+                <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+              </li>
+              
+            <% else %>
+              <li class="nav-item">
+                <%= link_to "About", about_path, class: 'nav-link text-dark'%>
+              </li>
+              <li class="nav-item">
+                <%= link_to "商品一覧", items_path, class: 'nav-link text-dark' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "新規登録", new_customer_registration_path, class: 'nav-link text-dark' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "ログイン", new_customer_session_path, class: 'nav-link text-dark' %>
+              </li>
+            <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    
+    
     <%= yield %>
   </body>
 </html>
