--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,1 +1,15 @@
-<h1>admin/items/new</h1>
+<h4>商品新規登録</h4>
+
+<%= form_with model: @item, url: admin_items_path, local: true do |f| %>
+
+  <h4>商品画像</h4>
+  <%= f.attachment_field :image %>
+  <h4>商品名</h4>
+  <%= f.text_field :name %>
+  <h4>商品説明</h4>
+  <%= f.text_area :introduction %>
+  <h4>税抜価格</h4>
+  <%= f.text_field :price %>円
+  
+  <%= f.submit '新規登録', class: 'btn btn-success' %>
+<% end %>
