--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,1 +1,12 @@
-<h1>admin/genres/edit</h1>
+<h4>ジャンル編集</h4>
+
+<%= form_with model:@genre, url: admin_genre_path, local: true do |f| %>
+
+<h4>ジャンル名</h4>
+  <%= f.text_field :name, class: 'form-control' %>
+</div>
+
+<div class='form-group'>
+  <%= f.submit '変更をする', class: 'btn btn-success' %>
+</div>
+<% end %>
