--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -8,6 +8,8 @@
   <%= f.text_field :name %>
   <h4>商品説明</h4>
   <%= f.text_area :introduction %>
+  <h4>ジャンル</h4>
+
   <h4>税抜価格</h4>
   <%= f.text_field :price %>円
   
