--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,1 +1,40 @@
-<h1>admin/items/index</h1>
+<h4>商品一覧</h4>
+
+<table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+          <th>商品ID</th>
+          <th>商品名</th>
+          <th>税抜価格</th>
+          <th>ジャンル</th>
+          <th>ステータス</th>
+          </tr>
+        </thead>
+      <% @items.each do |item| %>
+      <tbody>
+        <tr>
+          <td>
+           <%= item.id %>
+          </td>
+          <td>
+           <%= link_to admin_item_path(item.id), method: :get do %>
+           <%= item.name %>
+           <% end %>
+          </td>
+          <td>
+           <%= item.price %>
+          </td>
+          <td>
+           <%= item.genre.name %>
+          </td>
+          <td>
+            <% if item.is_active == true %>
+            販売中
+            <% else %>
+            販売停止中
+            <% end %>
+          </td>
+        </tr>
+      </tbody>
+      <% end %>
+      </table>
