--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -9,9 +9,14 @@
   <h4>商品説明</h4>
   <%= f.text_area :introduction %>
   <h4>ジャンル</h4>
-<%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
+　<%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
   <h4>税抜価格</h4>
   <%= f.text_field :price %>円
+  <h4>販売ステータス</h4>
+  <%= f.radio_button :is_active, true %>
+  <%= f.label :is_active, '販売中', value: true %>
+  <%= f.radio_button :is_active, false %>
+  <%= f.label :is_active, '販売停止中', value: false %>
   
   <%= f.submit '新規登録', class: 'btn btn-success' %>
 <% end %>
