--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,1 +1,19 @@
-<h1>admin/items/show</h1>
+<h4>商品詳細</h4>
+
+<div>
+  <p><%= attachment_image_tag @item, :image, :fill, 100, 100, fallback: "no_image.jpg" %></p>
+  <p>商品名：<%= @item.name %></p>
+  <p>商品説明：<%= @item.introduction %></p>
+  <p>ジャンル：<%= @item.genre.name %></p>
+　<p>税込価格:<%= @item.price.to_i*1.08 %>円</p>
+　<p>(税抜価格):<%= @item.price %>円</p>
+　<p>販売ステータス: 
+　<% if @item.is_active == true %>
+　販売中
+　<% else %>
+　販売停止中
+　<% end %>
+　</p>
+　
+　<%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-success" %>
+</div>
