--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,1 +1,29 @@
-<h1>admin/items/edit</h1>
+<h4>商品編集</h4>
+
+<%= form_with model:@item, url: admin_item_path, local: true do |f| %>
+
+<h4>商品画像</h4>
+<%= f.attachment_field :image, placeholder: "商品画像" %>
+
+<h4>商品名</h4>
+  <%= f.text_field :name, class: 'form-control' %>
+  
+<h4>商品説明</h4>
+  <%= f.text_area :introduction, class: 'form-control' %>
+  
+<h4>ジャンル</h4>
+<%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
+
+<h4>税抜価格</h4>
+<%= f.text_field :price %>円
+
+<h4>販売ステータス</h4>
+<%= f.radio_button :is_active, true %>
+  <%= f.label :is_active, '販売中', value: true %>
+  <%= f.radio_button :is_active, false %>
+  <%= f.label :is_active, '販売停止中', value: false %>
+
+<div class='form-group'>
+  <%= f.submit '変更を保存', class: 'btn btn-success' %>
+</div>
+<% end %>
