--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <p>LOGO</p>
+          <p class:"navbar-brand">LOGO</p>
           
             
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,24 +21,24 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-            <% if admin_signed_in? %>
-            <li class="nav-item">
-                <%= link_to "商品一覧", admin_items_path %>
+              <% if admin_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "商品一覧", admin_items_path, class: 'nav-link text-dark' %>
               </li>
               <li class="nav-item">
-                <p>会員一覧</p>
+                <%= link_to "会員一覧", admin_customers_path, class: 'nav-link text-dark' %>
               </li>
               <li class="nav-item">
-                <p>注文履歴一覧</p>
+                <%= link_to "注文履歴一覧", admin_root_path, class: 'nav-link text-dark' %>
               </li>
               <li class="nav-item">
-                <p>ジャンル一覧</p>
+                <%= link_to "ジャンル一覧", admin_genres_path, class: 'nav-link text-dark' %>
               </li>
               <li class="nav-item">
-                <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+                <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
               </li>
               
-            <% else %>
+              <% else %>
               <li class="nav-item">
                 <%= link_to "About", about_path, class: 'nav-link text-dark'%>
               </li>
@@ -51,7 +51,7 @@
               <li class="nav-item">
                 <%= link_to "ログイン", new_customer_session_path, class: 'nav-link text-dark' %>
               </li>
-            <% end %>
+              <% end %>
             </ul>
           </div>
         </div>
