--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,33 +1,37 @@
-<h4>ジャンル一覧・追加</h4>
+<div class="container">
+  <div class="bg-light w-25 mb-5 text-center">
+    <h5>ジャンル一覧・追加</h5>
+  </div>
 
-<%= form_with model: @genre, url: admin_genres_path, local: true do |f| %>
-<div class='form-group'>
-  <h4>ジャンル名</h4>
-  <%= f.text_field :name, class: 'form-control' %>
-</div>
-<div class='form-group'>
-  <%= f.submit '新規登録', class: 'btn btn-success' %>
-</div>
-<% end %>
+  <%= form_with model: @genre, url: admin_genres_path, local: true do |f| %>
+  <div class='row mb-5'>
+    <%= f.label :ジャンル名, class: "col-md-2 col-form-label text-center" %>
+    <%= f.text_field :name, class: "col-md-3 form-control" %>
+    <div class="col-md-1 ml-1">
+      <%= f.submit '新規登録', class: 'btn btn-success' %>
+    </div>
+  </div>
+  <% end %>
 
-<table class="table table-hover table-inverse">
-        <thead>
-          <tr>
-          <th></th>
-          <th>ジャンル</th>
-          <th colspan="3"></th>
-          </tr>
-        </thead>
-      <% @genres.each do |genre| %>
-      <tbody>
-        <tr>
-          <td>
-           <%= genre.name %>
-          </td>
-          <td>
-            <%= link_to "編集する", edit_admin_genre_path(genre.id), class: 'btn btn-success' %>
-          </td>
-        </tr>
-      </tbody>
-      <% end %>
-      </table>
+  <table class="table table-hover table-inverse col-md-4 ml-5">
+    <thead class="bg-light">
+      <tr>
+        <th colspan="3", class="text-center">ジャンル</th>
+        <th></th>
+      </tr>
+    </thead>
+    <% @genres.each do |genre| %>
+    <tbody>
+      <tr>
+        <td colspan="3">
+          <%= genre.name %>
+        </td>
+        <td style="text-align: right">
+          <%= link_to "編集する", edit_admin_genre_path(genre.id), class: 'btn btn-success' %>
+        </td>
+      </tr>
+    </tbody>
+    <% end %>
+  </table>
+
+</div>
