[Update] ジャンル編集画面レイアウト

--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,12 +1,16 @@
-<h4>ジャンル編集</h4>
+<div class="container">
+  <div class="bg-light w-25 mb-5 text-center">
+    <h5>ジャンル編集</h5>
+  </div>
 
 <%= form_with model:@genre, url: admin_genre_path, local: true do |f| %>
-
-<h4>ジャンル名</h4>
-  <%= f.text_field :name, class: 'form-control' %>
-</div>
-
-<div class='form-group'>
-  <%= f.submit '変更をする', class: 'btn btn-success' %>
+<div class='row'>
+  <%= f.label :ジャンル名, class: "col-md-2 col-form-label text-center" %>
+  <%= f.text_field :name, class: "col-md-3form-control" %>
+  <div class="col-md-1 ml-3">
+    <%= f.submit '変更を保存', class: "btn btn-success" %>
+  </div>
 </div>
 <% end %>
+
+</div>
