--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,22 +1,49 @@
-<h4>商品新規登録</h4>
+<div class="container">
+  <div class="bg-light w-25 mb-5 text-center">
+    <h4>商品新規登録</h4>
+  </div>
 
-<%= form_with model: @item, url: admin_items_path, local: true do |f| %>
 
-  <h4>商品画像</h4>
-  <%= f.attachment_field :image %>
-  <h4>商品名</h4>
-  <%= f.text_field :name %>
-  <h4>商品説明</h4>
-  <%= f.text_area :introduction %>
-  <h4>ジャンル</h4>
-　<%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
-  <h4>税抜価格</h4>
-  <%= f.text_field :price %>円
-  <h4>販売ステータス</h4>
-  <%= f.radio_button :is_active, true %>
-  <%= f.label :is_active, '販売中', value: true %>
-  <%= f.radio_button :is_active, false %>
-  <%= f.label :is_active, '販売停止中', value: false %>
-  
-  <%= f.submit '新規登録', class: 'btn btn-success' %>
-<% end %>
+  <%= form_with model: @item, url: admin_items_path, local: true do |f| %>
+
+  <div class="row mb-3">
+    <%= f.label :商品画像, class: "col-md-5 text-center col-form-label" %>
+    <%= f.attachment_field :image, class: " col-md-6" %>
+  </div>
+
+  <div class="row mb-3">
+    <%= f.label :商品名, class: "col-md-5 text-center col-form-label" %>
+    <%= f.text_field :name, class: "col-md-3 ml-3 form-control" %>
+  </div>
+
+  <div class="row mb-3">
+    <%= f.label :商品説明, class: "col-md-5 text-center col-form-label" %>
+    <%= f.text_area :introduction, class: "col-md-3 ml-3 form-control" %>
+  </div>
+
+  <div class="row mb-3">
+    <%= f.label :ジャンル, class: "col-md-5 text-center col-form-label" %>
+　  <%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
+　</div>
+
+　<div class="row mb-3">
+    <%= f.label :税抜価格, class: "col-md-5 text-center col-form-label" %>
+    <%= f.text_field :price, class: "ml-3" %>円
+  </div>
+
+  <div class="row mb-5">
+    <%= f.label :販売ステータス, class: "col-md-5 text-center" %>
+    <%= f.radio_button :is_active, true, class: "form-check mt-2 ml-3" %>
+    <%= f.label :is_active, '販売中', value: true, class: "form-check-label ml-1" %>
+    <%= f.radio_button :is_active, false, class: "form-check mt-2 ml-1" %>
+    <%= f.label :is_active, '販売停止中', value: false, class: "form-check-label ml-1" %>
+  </div>
+
+  <div class="row">
+    <div class="col-md-5"></div>
+    <%= f.submit '新規登録', class: 'btn btn-success ml-3' %>
+  </div>
+  <% end %>
+  </div>
+
+</div>
