--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,7 +1,14 @@
-<h4>商品一覧</h4>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-2 bg-light text-center pt-1">
+      <h4>商品一覧</h4>
+    </div>
+    <div class="col-md-8"></div>
+    <%=link_to "新規登録画面", new_admin_item_path, class: "btn btn-primary col-md-2" %>
+  </div>
 
-<table class="table table-hover table-inverse">
-        <thead>
+  <table class="table table-hover table-inverse mt-5">
+        <thead class="bg-light">
           <tr>
           <th>商品ID</th>
           <th>商品名</th>
@@ -38,3 +45,4 @@
       </tbody>
       <% end %>
       </table>
+  </div>
