--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,29 +1,48 @@
-<h4>商品編集</h4>
+<div class="container">
+  <div class="bg-light w-25 mb-5 text-center">
+    <h4>商品編集</h4>
+  </div>
 
 <%= form_with model:@item, url: admin_item_path, local: true do |f| %>
 
-<h4>商品画像</h4>
-<%= f.attachment_field :image, placeholder: "商品画像" %>
+  <div class="row mb-3">
+    <%= f.label :商品画像, class: "col-md-5 text-center col-form-label" %>
+    <%= f.attachment_field :image, placeholder: "商品画像" , class: " col-md-6"%>
+  </div>
 
-<h4>商品名</h4>
-  <%= f.text_field :name, class: 'form-control' %>
-  
-<h4>商品説明</h4>
-  <%= f.text_area :introduction, class: 'form-control' %>
-  
-<h4>ジャンル</h4>
-<%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
 
-<h4>税抜価格</h4>
-<%= f.text_field :price %>円
+<div class="row mb-3">
+    <%= f.label :商品名, class: "col-md-5 text-center col-form-label" %>
+    <%= f.text_field :name, class: 'col-md-3 form-control' %>
+</div>
 
-<h4>販売ステータス</h4>
-<%= f.radio_button :is_active, true %>
-  <%= f.label :is_active, '販売中', value: true %>
-  <%= f.radio_button :is_active, false %>
-  <%= f.label :is_active, '販売停止中', value: false %>
+<div class="row mb-3">
+  <%= f.label :商品説明, class: "col-md-5 text-center col-form-label" %>
+  <%= f.text_area :introduction, class: 'col-md-3 form-control' %>
+</div>
 
-<div class='form-group'>
+<div class="row mb-3">
+    <%= f.label :ジャンル, class: "col-md-5 text-center col-form-label" %>
+  <%= f.collection_select(:genre_id, Genre.all, :id, :name) %>
+</div>
+
+<div class="row mb-3">
+    <%= f.label :税抜価格, class: "col-md-5 text-center col-form-label" %>
+<%= f.text_field :price%>円
+</div>
+
+<div class="row mb-5">
+  <%= f.label :販売ステータス, class: "col-md-5 text-center" %>
+<%= f.radio_button :is_active, true, class: "form-check mt-2" %>
+  <%= f.label :is_active, '販売中', value: true, class: "form-check-label ml-1" %>
+  <%= f.radio_button :is_active, false, class: "form-check mt-2 ml-1" %>
+  <%= f.label :is_active, '販売停止中', value: false, value: false, class: "form-check-label ml-1" %>
+  </div>
+
+<div class="row">
+    <div class="col-md-5"></div>
   <%= f.submit '変更を保存', class: 'btn btn-success' %>
 </div>
 <% end %>
+
+</div>
