--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,19 +1,51 @@
-<h4>商品詳細</h4>
+<div class="container">
+  <div class="bg-light w-25 text-center mb-5">
+    <h4>商品詳細</h4>
+  </div>
 
-<div>
-  <p><%= attachment_image_tag @item, :image, :fill, 100, 100, fallback: "no_image.jpg" %></p>
-  <p>商品名：<%= @item.name %></p>
-  <p>商品説明：<%= @item.introduction %></p>
-  <p>ジャンル：<%= @item.genre.name %></p>
-　<p>税込価格:<%= @item.price.to_i*1.08 %>円</p>
-　<p>(税抜価格):<%= @item.price %>円</p>
-　<p>販売ステータス: 
-　<% if @item.is_active == true %>
-　販売中
-　<% else %>
-　販売停止中
-　<% end %>
-　</p>
-　
-　<%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-success" %>
+<div class="row">
+  <div class="col-md-4">
+    <%= attachment_image_tag @item, :image, :fill, 200, 200, fallback: "no_image.jpg" %></p>
+  </div>
+
+  <div class="col-md-8">
+
+    <div class="d-flex flex-row bd-highlight mb-3 ml-3">
+      <div class="col-md-6">商品名</div>
+      <div class="col-md-6 ml-2"><%= @item.name %></div>
+    </div>
+
+    <div class="d-flex flex-row bd-highlight mb-3 ml-3">
+      <div class="col-md-6">商品説明</div>
+      <div class="col-md-6 ml-2"><%= @item.introduction %></div>
+    </div>
+
+    <div class="d-flex flex-row bd-highlight mb-3 ml-3">
+      <div class="col-md-6">ジャンル</div>
+      <div class="col-md-6 ml-2"><%= @item.genre.name %></div>
+    </div>
+
+    <div class="d-flex flex-row bd-highlight mb-3">
+　    <div class="col-md-6">税込価格<br>(税抜価格)</div>
+　    <div class="col-md-6 p-0"><%= @item.price.to_i*1.08 %>円<br><%= @item.price %>円</div>
+　  </div>
+
+
+    <div class="d-flex flex-row bd-highlight mb-3">
+　    <div class="col-md-5">販売ステータス</div>
+　    <div class="col-md-7 text-left ml-2">
+　      <% if @item.is_active == true %>
+　      販売中
+　      <% else %>
+　      販売停止中
+　      <% end %>
+　    </div>
+　 </div>
+
+    <div>
+　    <%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-success" %>
+　  </div>
+
+</div>
+</div>
 </div>
