--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,7 +1,10 @@
-<h4>会員一覧</h4>
+<div class="container mt-5">
+    <div class="bg-light text-center pt-1 w-25">
+      <h4>会員一覧</h4>
+    </div>
 
-<table class="table table-hover table-inverse">
-        <thead>
+<table class="table table-hover table-inverse mt-5">
+        <thead class="bg-light">
           <tr>
           <th>会員ID</th>
           <th>氏名</th>
@@ -24,9 +27,6 @@
            <%= customer.email %>
           </td>
           <td>
-           <%= customer.is_active %>
-          </td>
-          <td>
             <% if customer.is_active == true %>
             有効
             <% else %>
@@ -37,3 +37,4 @@
       </tbody>
       <% end %>
       </table>
+</div>
