--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,26 +1,55 @@
-<h4> <%= @customer.last_name %> <%= @customer.first_name %> の会員詳細 </h4>
+<div class="container">
+  <div class="bg-light text-center w-25 mb-5">
+    <h4> <%= @customer.last_name %> <%= @customer.first_name %> さんの会員詳細 </h4>
+  </div>
 
-<h4>会員ID</h4>
-<%= @customer.id %>
-<h4>氏名</h4>
+<div class="row mb-3">
+  <div class="col-md-2">会員ID</div>
+  <%= @customer.id %>
+</div>
+
+<div class="row mb-3">
+<div class="col-md-2">氏名</div>
 <%= @customer.last_name %> <%= @customer.first_name %>
-<h4>フリガナ</h4>
+</div>
+
+<div class="row mb-3">
+<div class="col-md-2">フリガナ</div>
 <%= @customer.last_name_kana %> <%= @customer.first_name_kana %>
-<h4>郵便番号</h4>
+</div>
+
+<div class="row mb-3">
+<div class="col-md-2">郵便番号</div>
 <%= @customer.postal_code %>
-<h4>住所</h4>
+</div>
+
+<div class="row mb-3">
+<div class="col-md-2">住所</div>
 <%= @customer.address %>
-<h4>電話番号</h4>
+</div>
+
+<div class="row mb-3">
+<div class="col-md-2">電話番号</div>
 <%= @customer.telephone_number %>
-<h4>メールアドレス</h4>
+</div>
+
+<div class="row mb-3">
+<div class="col-md-2">メールアドレス</div>
 <%= @customer.email %>
-<h4>会員ステータス</h4>
+</div>
+
+<div class="row mb-5">
+<div class="col-md-2">会員ステータス</div>
 <% if @customer.is_active == true %>
 有効
 <% else %>
 退会
-<% end %> 
+<% end %>
+</div>
 
-<p><%= link_to "編集する", edit_admin_customer_path(@customer.id), class: 'btn btn-success' %></p>
+<div class="row">
+ <%= link_to "編集する", edit_admin_customer_path(@customer.id), class: 'btn btn-success' %>
+ <%= link_to "注文履歴一覧を見る", admin_root_path, class: "btn btn-primary ml-5" %>
+</div>
 
-<p>注文履歴一覧を見る</p>
+</div>
