--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,36 +1,59 @@
-<h4><%= @customer.last_name %> <%= @customer.first_name %>の会員情報編集</h4>
-<h4>会員ID</h4>
+<div class="container">
+  <div class="bg-light text-center w-25 mb-5">
+  <h4><%= @customer.last_name %> <%= @customer.first_name %>の会員情報編集</h4>
+  </div>
+
+<div class='row mb-3'>
+<div class="col-md-2">会員ID</div>
 <%= @customer.id %>
+</div>
+
 <%= form_with model:@customer, url: admin_customer_path, local: true do |f| %>
 
 
-<h4>氏名</h4>
-  <%= f.text_field :last_name, class: 'form-control' %>
-  <%= f.text_field :first_name, class: 'form-control' %>
-  
-<h4>フリガナ</h4>
-<%= f.text_field :last_name_kana, class: 'form-control' %>
-<%= f.text_field :first_name_kana, class: 'form-control' %>
+<div class="row mb-3">
+  <%= f.label :氏名, class: "col-md-2 col-form-label" %>
+  <%= f.text_field :last_name, class: 'col-md-3 form-control' %>
+  <%= f.text_field :first_name, class: 'col-md-3 form-control ml-3' %>
+</div>
 
-<h4>郵便番号</h4>
-<%= f.text_field :postal_code, class: 'form-control' %>
+<div class="row mb-3">
+<%= f.label :フリガナ, class: "col-md-2 col-form-label" %>
+<%= f.text_field :last_name_kana, class: 'col-md-3 form-control' %>
+<%= f.text_field :first_name_kana, class: 'col-md-3 form-control ml-3' %>
+</div>
 
-<h4>住所</h4>
-<%= f.text_field :address, class: 'form-control' %>
+<div class="row mb-3">
+<%= f.label :郵便番号, class: "col-md-2 col-form-label" %>
+<%= f.text_field :postal_code, class: 'col-md-3 form-control' %>
+</div>
 
-<h4>電話番号</h4>
-<%= f.text_field :telephone_number, class: 'form-control' %>
+<div class="row mb-3">
+<%= f.label :住所, class: "col-md-2 col-form-label" %>
+<%= f.text_field :address, class: 'col-md-3 form-control' %>
+</div>
 
-<h4>メールアドレス</h4>
-<%= f.text_field :email, class: 'form-control' %>
-  
-<h4>会員ステータス</h4>
-<%= f.radio_button :is_active, true %>
-  <%= f.label :is_active, '有効', value: true %>
-  <%= f.radio_button :is_active, false %>
-  <%= f.label :is_active, '退会', value: false %>
+<div class="row mb-3">
+<%= f.label :電話番号, class: "col-md-2 col-form-label" %>
+<%= f.text_field :telephone_number, class: 'col-md-3 form-control' %>
+</div>
+
+<div class="row mb-3">
+<%= f.label :メールアドレス, class: "col-md-2 col-form-label" %>
+<%= f.text_field :email, class: 'col-md-3 form-control' %>
+</div>
+
+<div class="row mb-3">
+<%= f.label :会員ステータス, class: "col-md-2 col-form-label" %>
+<%= f.radio_button :is_active, true, class: "mt-3 mr-1" %>
+  <%= f.label :is_active, '有効', value: true, class: "mt-2 mr-2" %>
+  <%= f.radio_button :is_active, false, class: "mt-3 mr-1" %>
+  <%= f.label :is_active, '退会', value: false, class: "mt-2" %>
+</div>
 
 <div class='form-group'>
   <%= f.submit '変更を保存', class: 'btn btn-success' %>
 </div>
 <% end %>
+
+</div>
