--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,7 +1,10 @@
-<h4>注文履歴一覧</h4>
+<div class="container">
+    <div class="col-md-2 bg-light text-center mb-5">
+      <h4>注文履歴一覧</h4>
+    </div>
 
 <table class="table table-hover table-inverse">
-        <thead>
+        <thead class="bg-light">
           <tr>
           <th>購入日時</th>
           <th>購入者</th>
@@ -28,3 +31,4 @@
       </tbody>
       <% end %>
       </table>
+</div>
