--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,51 @@
-<h1>public/homes/top.html.erb</h1>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-md-4"></div>
+    <div class="col-md-8">
+      ようこそ、ながのCAKEへ！
+      <br>このサイトは、ケーキ販売のECサイトになります。
+      <br>会員ではない方も商品の閲覧はできますが、
+      <br>購入には会員登録が必要になります。
+    </div>
+  </div>
+
+  <div class="row mt-5">
+    <div class="col-md-4">
+    </div>
+    <div class="col-md-8">
+      <h4>
+        <strong>新着商品</strong>
+      </h4>
+    </div>
+  </div>
+
+
+  <div class="row mt-3">
+    <% @items.each do |item| %>
+    <div class="col-md-3">
+      <%= attachment_image_tag @item, :image, :fill, 100, 100, fallback: "no_image.jpg" %>
+    </div>
+    <% end %>
+  </div>
+
+  <div class="row">
+    <% @items.each do |item| %>
+    <div class="col-md-3">
+      <%= item.name %>
+    </div>
+    <% end %>
+  </div>
+
+  <div class="row">
+    <% @items.each do |item| %>
+      <div class="col-md-3">
+        ¥<%= item.price %>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="row mt-4">
+    <div class="col-md-12 text-right">
+      <%= link_to "全ての商品を見る >", items_path %>
+    </div>
+  </div>
