--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,19 @@
-<h1>public/homes/about.html.erb</h1>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-md-12 text-center">
+      <h4>About</h4>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-md-12 text-center">
+      ながのCAKEは全国発送可能なケーキ屋さんです。
+      <br>お子様からお年寄りの方までお召し上がりいただけるよう、
+      <br>様々なバリエーションをご用意しております。
+      <br>また、全国への発送可能ですので「いつ」でも「どこ」でもご注文いただけます。
+      <br>ぜひご注文ください。
+    </div>
+  </div>
+</div>
