--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <p class:"navbar-brand">LOGO</p>
-          
-            
+
+
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-              <% if admin_signed_in? %>
+              <% if customer_signed_in? %>
               <li class="nav-item">
                 <%= link_to "商品一覧", admin_items_path, class: 'nav-link text-dark' %>
               </li>
@@ -37,7 +37,7 @@
               <li class="nav-item">
                 <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
               </li>
-              
+
               <% else %>
               <li class="nav-item">
                 <%= link_to "About", about_path, class: 'nav-link text-dark'%>
@@ -57,8 +57,8 @@
         </div>
       </nav>
     </header>
-    
-    
+
+
     <%= yield %>
   </body>
 </html>
