--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-              <% if customer_signed_in? %>
+
+              <% if admin_signed_in? %>
               <li class="nav-item">
                 <%= link_to "商品一覧", admin_items_path, class: 'nav-link text-dark' %>
               </li>
@@ -36,6 +37,23 @@
               </li>
               <li class="nav-item">
                 <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
+              </li>
+
+              <% elsif customer_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "マイページ", customers_my_page_path, class: 'nav-link text-dark' %>
+              </li>
+
+              <li class="nav-item">
+                <%= link_to "商品一覧", items_path, class: 'nav-link text-dark' %>
+              </li>
+
+              <li class="nav-item">
+                <%= link_to "カート", items_path, class: 'nav-link text-dark' %>
+              </li>
+
+              <li class="nav-item">
+                <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link text-dark' %>
               </li>
 
               <% else %>
