--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,1 +1,52 @@
-<h5>public/customers/edit</h5>
+<div class="container mb-3">
+  <div class="row">
+    <div class="col-3 bg-light text-center pt-2">
+      <h5>会員情報編集</h5>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+　<%= form_with model:@customer, url: customers_path, local: true do |f| %>
+
+　<div class="row mb-3">
+    <%=f.label :名前, class:"col-md-3 col-form-label" %>
+    <p class="ml-3">(姓)</p><%=f.text_field :last_name, class: "ml-1 col-md-3 form-control" %>
+    <p class="ml-4">(名)</p><%=f.text_field :first_name, class: "ml-1 col-md-3 form-control" %>
+  </div>
+
+  <div class="row mb-3">
+    <%=f.label :フリガナ, class:"col-md-3 col-form-label" %>
+    <p>(セイ)</p><%=f.text_field :last_name_kana, class: "ml-1 col-md-3 form-control" %>
+    <p class="ml-2">(メイ)</p><%=f.text_field :first_name_kana, class: "ml-1 col-md-3 form-control" %>
+  </div>
+
+  <div class="row mb-3">
+    <%=f.label :郵便番号（ハイフンなし）, class:"col-md-3 col-form-label" %>
+    <%=f.text_field :postal_code, class: "ml-5 col-md-3 form-control" %>
+  </div>
+
+  <div class="row mb-3">
+    <%=f.label :住所, class:"col-md-3 col-form-label" %>
+    <%=f.text_field :address, class: "ml-5 col-md-6 form-control" %>
+  </div>
+
+  <div class="row mb-3">
+    <%=f.label :電話番号（ハイフンなし）, class:"col-md-3 col-form-label" %>
+    <%=f.text_field :telephone_number, class: "ml-5 col-md-3 form-control" %>
+  </div>
+
+  <div class="row mb-5">
+    <%= f.label :メールアドレス, class: "col-md-3 col-form-label" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "ml-5 col-md-3 form-control" %>
+  </div>
+
+
+  <div class="row">
+    <div class="col-md-3"></div>
+    <%= f.submit "編集内容を保存", class: "btn btn-success col-md-3 ml-5" %>
+    <%= link_to "退会する", customers_unsubscribe_path, class: "btn btn-danger ml-5" %>
+  </div>
+  <% end %>
+
+</div>
