--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -12,7 +12,7 @@
       <h5><strong>登録情報</strong></h5>
     </div>
     <div class="col-md-2">
-      <%= link_to "編集する", customers_edit_path(@customer.id), class: "btn btn-success" %>
+      <%= link_to "編集する", public_edit_customer_path(@customer.id), class: "btn btn-success" %>
     </div>
  </div>
 </div>
