[Update] adminとcustomersのログアウト後の遷移先

--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="container">
-　<%= form_with model:@customer, url: customers_path, local: true do |f| %>
+　<%= form_with model:@customer, url: public_update_customer_path, local: true do |f| %>
 
 　<div class="row mb-3">
     <%=f.label :名前, class:"col-md-3 col-form-label" %>
