--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,1 +1,25 @@
-<h5>public/customers/unsubscribe</h5>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-md-12 text-center">
+      <h4>本当に退会しますか？</h4>
+    </div>
+  </div>
+</div>
+
+<div class="container mb-5">
+  <div class="row mt-5">
+    <div class="col-md-12 text-center">
+      退会すると、会員情報や
+      <br>これまでの購入履歴が閲覧できなくなります。
+      <br>退会する場合は、「退会する」をクッリクしてください。
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4"></div>
+    <%= link_to "退会しない", customers_my_page_path, class: "btn btn-primary col-md-2 mr-2" %>
+    <%= link_to "退会する", customers_withdraw_path, method: :patch, class: "btn btn-danger col-md-2 ml-2" %>
+  </div>
+</div>
