--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,1 +1,24 @@
-<h1>public/items/index.html.erb</h1>
+<div class="container">
+  <div class="row mt-5">
+
+<%= render 'public/items/list', genres: @genres %>
+
+    <div class="col-md-9">
+      <h4>
+        <strong>商品一覧</strong> (全<%= @items.count %>件)
+      </h4>
+      <div class="row mt-5">
+          <% @items.each do |item| %>
+          <div class="col-md-3 mb-5">
+          <%= link_to(item_path(item)) do %>
+          <%= attachment_image_tag @item, :image, :fill, 100, 100, fallback: "no_image.jpg" %><br>
+          <%= item.name %><br>
+          ¥<%= item.price %>
+          </div>
+          <% end %>
+          <% end %>
+      </div>
+    </div>
+
+  </div>
+</div>
