--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
               </li>
 
               <li class="nav-item">
-                <%= link_to "カート", items_path, class: 'nav-link text-dark' %>
+                <%= link_to "カート", cart_items_path, class: 'nav-link text-dark' %>
               </li>
 
               <li class="nav-item">
