--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -3,14 +3,26 @@
 
 <%= render 'public/items/list', genres: @genres %>
 
-<div class="col-md-9">
-      <div class="row mt-5">
-          <div class="mb-5">
-          <%= attachment_image_tag @item, :image, :fill, 400, 400, fallback: "no_image.jpg" %>
-          <%= @item.name %>
-          ¥<%= @item.price %>
-          </div>
-      </div>
+    <div class="col-md-4">
+      <%= attachment_image_tag @item, :image, :fill, 200, 200, fallback: "no_image.jpg" %>
+    </div>
+
+    <div class="col-md-5">
+      <h4 class="mb-3"><%= @item.name %></h4>
+      <p class="mb-5"><%= @item.introduction %></p>
+      <p>¥<%= @item.price.to_i*1.08 %>円　(税込)</p>
+
+    <div class="row mt-5">
+      <%= form_with model: @cart_item, url: cart_items_path, local: true do |f| %>
+        <div class="form-group mb-5">
+          <%= f.select :amount, {'１個': 1, '２個': 2, '３個': 3, '４個': 4, '５個': 5}, { include_blank: '個数選択'}, { class: 'form-control' , required: true } %>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'カートに入れる', class: 'btn btn-success' %>
+        </div>
+      <% end %>
+    </div>
+
     </div>
 
   </div>
