--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,1 +1,78 @@
-<h4>ショッピングカート</h4>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 mt-5">
+    <h4 class="bg-light w-50 text-center">ショッピングカート</h4>
+    </div>
+    <div class="col-md-6 text-right mt-5">
+      <%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete, class: "btn btn-danger" %>
+     </div>
+  </div>
+
+  <table class="table table-hover table-inverse table-bordered mt-5 mb-5 col-md-12">
+    <thead class="bg-light">
+      <tr>
+        <th class="col-md-3">商品名</th>
+        <th class="col-md-2">単価（税込）</th>
+        <th class="col-md-3">数量</th>
+        <th class="col-md-2">小計</th>
+        <th class="col-md-2"></th>
+      </tr>
+    </thead>
+
+    <% @cart_items.each do |cart_item| %>
+    <tbody>
+      <tr>
+        <td>
+          <%= cart_item.item.name %>
+        </td>
+        <td>
+          <%= cart_item.item.with_tax_price%>
+        </td>
+        <td>
+          <%= form_with model: cart_item, url: cart_item_path(cart_item.id), method: :patch, local: true do |f| %>
+          <div class="form-group row">
+            <div class="col-md-auto">
+              <%= f.select :amount, *[1..10], {selected: cart_item.amount}, { class: 'form-control' , required: true } %>
+            </div>
+            <div class="col-md-auto">
+              <%= f.submit '変更を保存', class: 'btn btn-success' %>
+            </div>
+          </div>
+          <% end %>
+        </td>
+        <td>
+          <%= cart_item.subtotal%>
+        </td>
+        <td>
+          <%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, class: "btn btn-danger" %>
+        </td>
+      </tr>
+    </tbody>
+    <% end %>
+  </table>
+
+
+  <div class="row">
+    <div class="col-md-8 mt-3">
+      <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
+    </div>
+    <div class="col-md-4 mt-3">
+      <table class="table table-hover table-inverse table-bordered">
+        <tr>
+          <th class="col-md-2">
+            合計金額
+          </th>
+          <td class="col-md-2">
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
+  <div class="row mt-5">
+    <div class="col-md-12 text-center">
+      <%= link_to "情報入力に進む", cart_items_path, class: "btn btn-success" %>
+    </div>
+  </div>
+
+</div>
