--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -41,6 +41,7 @@
           <% end %>
         </td>
         <td>
+          <% @sum += cart_item.subtotal %>
           <%= cart_item.subtotal%>
         </td>
         <td>
@@ -63,6 +64,7 @@
             合計金額
           </th>
           <td class="col-md-2">
+          <%= @sum %>
           </td>
         </tr>
       </table>
@@ -71,7 +73,7 @@
 
   <div class="row mt-5">
     <div class="col-md-12 text-center">
-      <%= link_to "情報入力に進む", cart_items_path, class: "btn btn-success" %>
+      <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
     </div>
   </div>
 
