[Add] 注文確認画面

--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -25,7 +25,7 @@
     </div>
 
 　　<div class="ml-3">
-    <%= f.radio_button :address_option, '0' %>
+    <%= f.radio_button :select_address, '0' %>
     <%= f.label :ご自身の住所 %>
     </div>
     <div class="ml-5 mb-4">
@@ -33,7 +33,7 @@
     </div>
 
     <div class="ml-3">
-    <%= f.radio_button :address_option, '1' %>
+    <%= f.radio_button :select_address, '1' %>
     <%= f.label :登録済み住所から選択 %>
     </div>
     <div class="ml-5 mb-4">
@@ -41,7 +41,7 @@
     </div>
 
     <div class="ml-3">
-    <%= f.radio_button :address_option, '2' %>
+    <%= f.radio_button :select_address, '2' %>
     <%= f.label :新しいお届け先 %>
     </div>
     <div class="row mb-3">
