[Add] 注文履歴詳細

--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -34,7 +34,7 @@
           <% end %>
         </td>
         <td>
-          <%= order.billing_amount %>円
+          <%= order.billing_amount.to_i + order.postage.to_i %>円
         </td>
         <td>
           <%= order.status %>
