--- a/app/views/public/orders/thanks.html.erb
+++ b/app/views/public/orders/thanks.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row text-center">
-    <div class="col-md-12">
+  <div class="row text-center mt-5">
+    <div class="col-md-12 mt-5">
       <h3>ご注文ありがとうございました!</h3>
     </div>
   </div>
