[Fix] 会員側注文履一覧・注文詳細

--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -3,6 +3,13 @@
     <h5>ジャンル編集</h5>
   </div>
 
+<% if @genre.errors.any? %>
+  <%= @genre.errors.count %>件のエラーが発生しました
+  <% @genre.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+
 <%= form_with model:@genre, url: admin_genre_path, local: true do |f| %>
 <div class='row'>
   <%= f.label :ジャンル名, class: "col-md-2 col-form-label text-center" %>
