--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -3,6 +3,13 @@
     <h4>商品新規登録</h4>
   </div>
 
+  <% if @item.errors.any? %>
+  <%= @item.errors.count %>件のエラーが発生しました
+  <% @item.errors.full_messages.each do |message| %>
+    <%= message %><br>
+  <% end %>
+<% end %>
+
 
   <%= form_with model: @item, url: admin_items_path, local: true do |f| %>
 
