--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -3,6 +3,13 @@
   <h4><%= @customer.last_name %> <%= @customer.first_name %>の会員情報編集</h4>
   </div>
 
+<% if @customer.errors.any? %>
+  <%= @customer.errors.count %>件のエラーが発生しました
+  <% @customer.errors.full_messages.each do |message| %>
+    <%= message %><br>
+  <% end %>
+<% end %>
+
 <div class='row mb-3'>
 <div class="col-md-2">会員ID</div>
 <%= @customer.id %>
