--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -6,6 +6,13 @@
   </div>
 </div>
 
+<% if @customer.errors.any? %>
+  <%= @customer.errors.count %>件のエラーが発生しました
+  <% @customer.errors.full_messages.each do |message| %>
+    <%= message %><br>
+  <% end %>
+<% end %>
+
 <div class="container">
 　<%= form_with model:@customer, url: public_update_customer_path, local: true do |f| %>
 
