--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,3 +1,10 @@
+<% if @item.errors.any? %>
+  <%= @item.errors.count %>件のエラーが発生しました
+  <% @item.errors.full_messages.each do |message| %>
+    <br><%= message %>
+  <% end %>
+<% end %>
+
 <div class="container">
   <div class="row mt-5">
 
@@ -10,7 +17,7 @@
     <div class="col-md-5">
       <h4 class="mb-3"><%= @item.name %></h4>
       <p class="mb-5"><%= @item.introduction %></p>
-      <p>¥<%= @item.price.to_i*1.08 %>円　(税込)</p>
+      <p>¥<%= @item.with_tax_price %>円　(税込)</p>
 
     <div class="row mt-5">
       <%= form_with model: @cart_item, url: cart_items_path, local: true do |f| %>
