[Fix] admin/注文一覧の商品合計個数の表示

--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -27,6 +27,7 @@
           <%= order.customer.last_name %> <%= order.customer.first_name %>
         </td>
         <td>
+          <% @total_amount = 0 %>
           <% order.order_details.each do |order_detail| %>
           <% @total_amount += order_detail.amount %>
           <% end %>
