[Fix] uiflowsに合わせて遷移先を修正

--- a/app/views/public/items/_list.html.erb
+++ b/app/views/public/items/_list.html.erb
@@ -10,7 +10,7 @@
       <tbody>
         <tr>
         <td>
-          <%= link_to surch_path(genre.id), method: :get do %>
+          <%= link_to genre_path(genre.id), method: :get do %>
             <%= genre.name %><br>
           <% end %>
         </td>
