--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -55,7 +55,7 @@
 
   <div class="row">
     <div class="col-md-8 mt-3">
-      <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
+      <%= link_to "買い物を続ける", root_path, class: "btn btn-primary" %>
     </div>
     <div class="col-md-4 mt-3">
       <table class="table table-hover table-inverse table-bordered">
