--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-5">
-    
+
     <%= render 'public/items/list', genres: @genres %>
 
     <div class="col-md-9">
@@ -12,7 +12,7 @@
           <br>購入には会員登録が必要になります。
         </div>
        </div>
-  
+
   <div class="row mt-5">
     <div class="col-md-8">
       <h4>
@@ -33,7 +33,9 @@
   <div class="row">
     <% @items.each do |item| %>
     <div class="col-md-3">
+      <%= link_to item_path(item.id), method: :get do %>
       <%= item.name %>
+      <% end %>
     </div>
     <% end %>
   </div>
