[Fix] 注文詳細テーブルの購入時価格

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -50,20 +50,20 @@
       </thead>
 
       <% @order.order_details.each do |order_detail| %>
-      <% @sum += order_detail.price / order_detail.amount * order_detail.amount %>
+      <% @sum += order_detail.with_tax_price * order_detail.amount %>
       <tbody>
         <tr>
           <td>
             <%= order_detail.item.name %>
           </td>
           <td>
-            <%= order_detail.price / order_detail.amount %>
+            <%= order_detail.with_tax_price %>
           </td>
           <td>
             <%= order_detail.amount %>
           </td>
           <td>
-            <%= order_detail.price / order_detail.amount * order_detail.amount %>
+            <%= order_detail.with_tax_price * order_detail.amount %>
           </td>
           <td>
             <%= form_with model:order_detail, url: admin_order_detail_path(order_detail.id), local: true do |f| %>
