--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -86,7 +86,7 @@
     <%= f.hidden_field :address, value: @order.address %>
     <%= f.hidden_field :name, value: @order.name %>
     <%= f.hidden_field :payment_method, value: @order.payment_method %>
-    <%= f.hidden_field :billing_amount, value: @sum + @order.postage %>
+    <%= f.hidden_field :billing_amount, value: @sum %>
 
     <%= f.submit '注文を確定する', class: 'btn btn-success' %>
     <% end %>
