--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -34,7 +34,7 @@
       <h5><strong>配送先</strong></h5>
     </div>
     <div class="col-md-2">
-      <%= link_to "一覧を見るボタン", addresses_path, class: "btn btn-primary" %>
+      <%= link_to "一覧を見る", addresses_path, class: "btn btn-primary" %>
     </div>
  </div>
 </div>
